# robotnik

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  requirements.txt  roboapi.py  robotnik.py  robotnik.service  setup.cfg  tmdb-sample-response.json  tmdb_individual.json
apitests/: chlisttest.py  rsstest.py  showfeeds.py  twtest.py
apitests/tmdb_samples/: tmdb-series-individual.json
botfuncs/: echobot.py  justwatchbot.py  rssbot.py  tmdb.py  twitterbot.py  ytsearch.py
etc/: robotnik.service
oldpyrobo/apitests/: chlisttest.py
oldpyrobo/apitests/tmdb_samples/: tmdb-series-response.json
oldpyrobo/botfuncs/: tmdb.py  ytsearch.py
oldpyrobo/tools/: htmlhelpers.py  rss.py
src/: CMakeLists.txt  bot_feature.hpp  echo_feature.cpp  echo_feature.hpp  main.cpp  robotnik.cpp  robotnik.hpp  rss_feature.cpp  rss_feature.hpp
src/dblayer/: CMakeLists.txt  key_value_store.cpp  key_value_store.hpp
src/rssparser/: CMakeLists.txt  article.hpp  expat_parser.cpp  expat_parser.hpp  feed_data.cpp  feed_data.hpp  feed_fetcher.cpp  feed_fetcher.hpp  feed_parser.cpp  feed_parser.hpp  roborssparser_test.cpp  rss_parser.cpp  time_converters.cpp  time_converters.hpp
tools/: build.sh  html.py  rss.py  run-checker.sh  run-coverage.sh  run-tidy.sh  setup.sh  storage.py  test.sh
